Update filter list when adding/remove, make background colors consistent when adding, fix filter going off screen

--- a/styles/flyout.css
+++ b/styles/flyout.css
@@ -89,7 +89,7 @@
 .filter-dropdown {
     position: absolute;
     top: 100%;
-    left: 0;
+    right: 0;
     margin-top: 4px;
     background: var(--panel-bg);
     border: 1px solid var(--border-color);
